@@ -1,6 +1,8 @@
 0.18.3
+ - fix: remember ETag of uploaded resources (#80)
  - enh: allow sharing individual datasets instead of collections (#32)
  - enh: add preview option for dataset description in upload dialog (#52)
+ - enh: introduce write lock for eternal job updates
 0.18.2
  - ref: make action buttons in filter view hideable
 0.18.2
